[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/ui/verdana-bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/ui/Roboto-Medium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ui/theme/main.tres" type="Theme" id=3]
[ext_resource path="res://ui/verdana.tres" type="DynamicFont" id=4]
[ext_resource path="res://ui/account/usernamepass.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/account/Account.gd" type="Script" id=6]
[ext_resource path="res://ui/Status.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 15
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 3 )
OptionButton/fonts/font = ExtResource( 4 )

[node name="account" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 6 )

[node name="Disclaimer" type="Label" parent="."]
margin_right = 1422.0
margin_bottom = 75.0
rect_min_size = Vector2( 700, 0 )
custom_fonts/font = SubResource( 1 )
text = "Create account, OR play anonymous. When playing anonymously, upon exiting the game, you will be unable to rejoin."
autowrap = true

[node name="StatusLabel" type="Label" parent="."]
margin_top = 90.0
margin_right = 1422.0
margin_bottom = 140.0
script = ExtResource( 7 )

[node name="choose" type="TabContainer" parent="."]
margin_left = 177.0
margin_top = 155.0
margin_right = 1245.0
margin_bottom = 613.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="signup" type="VBoxContainer" parent="choose"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 90.0
margin_right = -30.0
margin_bottom = -30.0
custom_constants/separation = 5

[node name="usernamepass" parent="choose/signup" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1008.0
margin_bottom = 227.0

[node name="flag" type="OptionButton" parent="choose/signup"]
visible = false
margin_left = 531.0
margin_top = 230.0
margin_right = 831.0
margin_bottom = 336.0
rect_min_size = Vector2( 300, 0 )
focus_mode = 0
size_flags_horizontal = 4
theme = SubResource( 2 )
text = "flag"
align = 1
expand_icon = true

[node name="signupbutton" type="Button" parent="choose/signup"]
margin_left = 389.0
margin_top = 232.0
margin_right = 619.0
margin_bottom = 338.0
rect_min_size = Vector2( 230, 0 )
focus_mode = 0
size_flags_horizontal = 4
enabled_focus_mode = 0
text = "sign up"

[node name="signin" type="VBoxContainer" parent="choose"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 90.0
margin_right = -30.0
margin_bottom = -30.0
custom_constants/separation = 5

[node name="usernamepass" parent="choose/signin" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 177.0
margin_right = 1185.0
margin_bottom = 227.0

[node name="signinbutton" type="Button" parent="choose/signin"]
margin_left = 566.0
margin_top = 232.0
margin_right = 796.0
margin_bottom = 338.0
rect_min_size = Vector2( 230, 0 )
focus_mode = 0
size_flags_horizontal = 4
enabled_focus_mode = 0
text = "sign in"

[connection signal="pressed" from="choose/signup/signupbutton" to="." method="_on_signup_pressed"]
[connection signal="pressed" from="choose/signin/signinbutton" to="." method="_on_signin_pressed"]
